--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,6 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-  box-sizing: border-box;
-  box-sizing: border-box;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -21,9 +19,14 @@ html {
 
 img {
   width: 100%;
+  margin: auto;
 }
 
-img:first-child, img:nth-child(3) {
+body {
+  text-align: center;
+}
+
+img:first-child(2) img:nth-child(3) {
   width: 100%;
   display: inline-block;
 }
