--- a/css/main.css
+++ b/css/main.css
@@ -26,38 +26,46 @@ body {
   text-align: center;
 }
 
-img:first-child(2) img:nth-child(3) {
-  width: 100%;
-  display: inline-block;
-}
-
-img:nth-child(2), img:nth-child(4) {
+img:nth-child(2),
+img:nth-child(4) {
   display: none;
 }
 
 @media only screen and (min-width: 25em) {
 
   img {
-    width: 100%;
-  }
-
-  img:nth-child(2), img:nth-child(4) {
     display: inline-block;
     width: 49%;
   }
 
-  img:first-child, img:nth-child(3) {
-      width: 49%;
-    }
-  }
-
-  @media only screen and (min-width: 38em) {
-
-  img {
-    width: 100%;
-  }
-
-  img:nth-child(2), img:nth-child(3), img:nth-child(4) {
-    width: 32%;
+  img:nth-child(2),
+  img:nth-child(4) {
     display: inline-block;
   }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  img {
+    display: inline-block;
+    width: 32%;
+  }
+
+  img:first-child {
+    display: none;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  img {
+    width: 24%;
+  }
+
+  img:first-child {
+    display: inline-block;
+  }
+
+}
